# danse

./: .gitignore  .replit  Cargo.toml  DEPLOIEMENT_LOCAL.md  DXGI_SETUP.md  INSTALLATION_EXE.md  INSTALLATION_WINDOWS.md  MULTI_ACCOUNTS.md  PACKAGING_FIX.md  PASSWORD_STORAGE.md  PLAN_ACTION.md  PLAN_GENERATION_POIDS_ML.md  PLAN_MISE_EN_SERVICE.md  PROCEDURE_REPARATION.md  README.md  README_ARCHITECTURE.md  README_TESTS.md  REPAIR_PLAN.md  TODO_TAURI.md  capture_fix_plan.md  download_models.py  electron-builder.json  electron-builder.yml  package-lock.json  package.json  rank_weights.json  replit.md  start_ocr_service.bat  suit_weights.json
attached_assets/: Pasted--1-Le-bot-d-tecte-bien-les-fen-tres-GGClub-On-voit-clai_1769004037122.txt  Pasted--2025-12-08T18-00-05-716Z-INFO-DB-Initialisation-connex_1765216893338.txt  Pasted--2025-12-08T18-00-05-716Z-INFO-DB-Initialisation-connex_1765216908416.txt  Pasted--2025-12-08T18-00-05-716Z-INFO-DB-Initialisation-connex_1765216922908.txt  Pasted--2025-12-08T18-00-05-716Z-INFO-DB-Initialisation-connex_1765216936987.txt  Pasted--2025-12-08T18-00-05-818Z-SESSION-DB-Connexion-PostgreS_1765216962183.txt  Pasted--2025-12-08T21-05-45-396Z-INFO--1765228021170_1765228021171.txt  Pasted--2025-12-08T21-05-45-396Z-INFO--1765228367885_1765228367887.txt  Pasted--2025-12-08T21-05-46-031Z-INFO-DB-Initialisation-connex_1765227997056.txt  Pasted--2025-12-08T21-05-46-031Z-INFO-DB-Initialisation-connex_1765228338919.txt  Pasted--2025-12-09T11-21-25-389Z-INFO--1765279420332_1765279420332.txt  Pasted--2025-12-09T11-21-28-133Z-DEBUG-API-GET-api-session-cur_1765279504910.txt  Pasted--2025-12-09T11-29-41-788Z-INFO--1765279858582_1765279858583.txt  Pasted--2025-12-09T11-29-42-100Z-INFO-DB-Initialisation-connex_1765279867780.txt  Pasted--2025-12-09T16-45-14-449Z-INFO--1765298975651_1765298975653.txt  Pasted--2025-12-09T16-45-14-742Z-INFO-DB-Initialisation-connex_1765298954893.txt  Pasted--2025-12-09T17-12-58-319Z-INFO--1765300453810_1765300453811.txt  Pasted--2025-12-09T17-12-58-662Z-INFO-DB-Initialisation-connex_1765300462103.txt  Pasted--2025-12-18T15-29-57-606Z-INFO--1766071923024_1766071923024.txt  Pasted--2025-12-18T15-29-57-822Z-INFO-DB-Initialisation-connex_1766071887829.txt  Pasted--2025-12-18T15-50-42-406Z-INFO--1766073150600_1766073150600.txt  (+138 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+140 files in other folders)
